--- a/templates/base.html
+++ b/templates/base.html
@@ -114,7 +114,7 @@
                   <li class=""><a class="nav-link " href="{% url 'grid:update_grid' %}"><i data-feather="layout"></i><span>View Grid</span></a>
                    
                   </li>
-                  <li class=""><a class="nav-link " href="{% url 'grid:user_list' %}"><i data-feather="file-text"></i><span>User</span></a>
+                  <li class=""><a class="nav-link " href="{% url 'grid:user_list' %}"><i data-feather="file-text"></i><span>Users</span></a>
                   
                   </li>
 
