--- a/templates/register.html
+++ b/templates/register.html
@@ -44,7 +44,7 @@
 </div>
 
 </div>
-        <button type="submit">Register</button>
+        <button class="btn btn-primary btn-block" type="submit">Register</button>
     </form>
 </div>
 
