--- a/templates/user_list.html
+++ b/templates/user_list.html
@@ -22,10 +22,11 @@
 
 {% block content %}
   <div class="container-fluid general-widget">
-    <div class="card-header" style="background: #0c7097; color:white;">Upload Grid</div>
     <div>
-    <button class="btn btn-primary-light btn-right" type="button"><a href="{% url 'grid:register' %}"><i data-feather="log-out"></i>Create New User</a></button>
-    </div>
+      <button class="btn btn-primary-light btn-left" type="button"><a href="{% url 'grid:register' %}"><i data-feather="log-out"></i>Create New User</a></button>
+      </div>
+    <div class="card-header" style="background: #0c7097; color:white;">Upload Grid</div>
+    
     <div class="card">
      
       <div class="card-body">
