--- a/templates/base.html
+++ b/templates/base.html
@@ -105,7 +105,7 @@
                     <div class="mobile-back text-end"><span>Back</span><i class="fa fa-angle-right ps-2" aria-hidden="true"></i></div>
                   </li>
                   
-                  <li class=""><a class="nav-link " href="{% url 'grid:index' %}"><i data-feather="home" class="icofont icofont-dashboard"></i><span>Dashboard</span></a>
+                  <li class=""><a class="nav-link " href="{% url 'grid:index' %}"><i data-feather="home" ></i><span>Dashboard</span></a>
                    
                   </li>
                   <li class=""><a class="nav-link " href="{% url 'grid:upload_grid' %}"><i data-feather="airplay"></i><span>Grid Upload</span></a>
