--- a/templates/update_grid.html
+++ b/templates/update_grid.html
@@ -56,7 +56,7 @@
                                     <th>Agent Payout 70 % OD</th>
                                     <th>Agent Payout 70 % TP</th>
                                     <th>Agent Payout 70 % NET</th>
-                                    <th>Agent Payout 70 % OD</th>
+                                    <th>Agent Payout 80 % OD</th>
                                     <th>Agent Payout 80 % TP</th>
                                     <th>Agent Payout 80 % NET</th>
                                     <th>Agent Payout 90 % OD</th>
@@ -70,7 +70,7 @@
                         <tbody>
                            {% for i in data %}
                                 <tr class="edit-field">
-                                    <td class="id-field">{{i.id}}</td>
+                                    <td class="id-field">{{i.pk}}</td>
                                     <td class="company-field">{{i.company}}</td>
                                     <td class="product-field">{{i.product}}</td>
                                     <td class="vehicaltype-field">{{i.vehical_type}}</td>
@@ -82,16 +82,16 @@
                                     <td class="rate-field">{{i.rate_od}}</td>
                                     <td class="ratetp-field">{{i.rate_tp}}</td>
                                     <td class="ratenet-field">{{i.rate_net}}</td>
-                                    <td>{{i.rateuser1_od}}</td>
-                                    <td>{{i.rateuser1_tp}}</td>
-                                    <td>{{i.rateuser1_net}}</td>
-                                    <td>{{i.rateuser2_od}}</td>
-                                    <td>{{i.rateuser2_tp}}</td>
-                                    <td>{{i.rateuser2_net}}</td>
-                                    <td>{{i.rateuser3_od}}</td>
-                                    <td>{{i.rateuser3_tp}}</td>
-                                    <td>{{i.rateuser3_net}}</td>
-                                    <td>{{i.remarks}}</td>
+                                    <td class="rateuseroneod-field">{{i.rateuser1_od}}</td>
+                                    <td class="rateuseronetp-field">{{i.rateuser1_tp}}</td>
+                                    <td class="rateuseronenet-field">{{i.rateuser1_net}}</td>
+                                    <td class="rateusertwood-field">{{i.rateuser2_od}}</td>
+                                    <td class="rateusertwotp-field">{{i.rateuser2_tp}}</td>
+                                    <td class="rateusertwonet-field">{{i.rateuser2_net}}</td>
+                                    <td class="rateuserthreeod-field">{{i.rateuser3_od}}</td>
+                                    <td class="rateuserthreetp-field">{{i.rateuser3_tp}}</td>
+                                    <td class="rateuserthreenet-field">{{i.rateuser3_net}}</td>
+                                    <td class="remarks-field">{{i.remarks}}</td>
                                     <td>{{i.created_on|date:"d-M-y"}}</td>
                                     <td>
                                         <button class="btn btn-primary btn-edit" type="button">Edit</button>
@@ -145,7 +145,7 @@
         
                     // Get the data from the edited row
                     var row = this.closest('tr');
-                    var id = row.querySelector('.id-field').innerText;
+                    var pk = row.querySelector('.id-field').innerText;
                     var rate_od = row.querySelector('.rate-field').querySelector('input').value;
                     var rate_tp = row.querySelector('.ratetp-field').querySelector('input').value;
                     var company = row.querySelector('.company-field').querySelector('input').value;
@@ -156,13 +156,93 @@
                     var month = row.querySelector('.month-field').querySelector('input').value;
                     var state = row.querySelector('.state-field').querySelector('input').value;
                     var rto = row.querySelector('.rto-field').querySelector('input').value;
+                    var remarks = row.querySelector('.remarks-field').querySelector('input').value;
                     var rate_net = row.querySelector('.ratenet-field').querySelector('input').value;
+                    // Calculate rate_usertwo_od_ 70% of rate_od
+                    var rate_od = parseFloat(row.querySelector('.rate-field input').value);
+                    var rate_userone_od_field = row.querySelector('.rateuseroneod-field');
+                    var rate_userone_od_field_calculated_value = (rate_od * 0.7).toFixed(2); // Calculate 80%
+
+                    // Calculate rate_userone_tp 70% of rate_tp
+
+                    var rate_tp = parseFloat(row.querySelector('.ratetp-field input').value);
+                    var rate_userone_tp_field = row.querySelector('.rateuseronetp-field');
+                    var rate_userone_tp_field_calculated_value = (rate_tp * 0.7).toFixed(2);
+
+                    // Calculate rate_userone_net 70% of rate_net
+                    var rate_net = parseFloat(row.querySelector('.ratenet-field input').value);
+                    var rate_userone_net_field = row.querySelector('.rateuseronenet-field');
+                    var rate_userone_net_field_calculated_value = (rate_net * 0.7).toFixed(2);
+
+                    // Calculate rate_usertwo_od_ 80% of rate_od
+                    var rate_od = parseFloat(row.querySelector('.rate-field input').value);
+                    var rate_usertwo_od_field = row.querySelector('.rateusertwood-field');
+                    var rate_usertwo_od_field_calculated_value = (rate_od * 0.8).toFixed(2); // Calculate 80%
+
+                    // Calculate rate_usertwo_tp 80% of rate_tp
+
+                    var rate_tp = parseFloat(row.querySelector('.ratetp-field input').value);
+                    var rate_usertwo_tp_field = row.querySelector('.rateusertwotp-field');
+                    var rate_usertwo_tp_field_calculated_value = (rate_tp * 0.8).toFixed(2);
+
+                    // Calculate rate_usertwo_net 80% of rate_net
+                    var rate_net = parseFloat(row.querySelector('.ratenet-field input').value);
+                    var rate_usertwo_net_field = row.querySelector('.rateusertwonet-field');
+                    var rate_usertwo_net_field_calculated_value = (rate_net * 0.8).toFixed(2);
+
+                    // Calculate rate_userthree_od_ 90% of rate_od
+                    var rate_od = parseFloat(row.querySelector('.rate-field input').value);
+                    var rate_userthree_od_field = row.querySelector('.rateuserthreeod-field');
+                    var rate_userthree_od_field_calculated_value = (rate_od * 0.9).toFixed(2); // Calculate 80%
+
+                    // Calculate rate_userthree_tp 90% of rate_tp
+
+                    var rate_tp = parseFloat(row.querySelector('.ratetp-field input').value);
+                    var rate_userthree_tp_field = row.querySelector('.rateuserthreetp-field');
+                    var rate_userthree_tp_field_calculated_value = (rate_tp * 0.9).toFixed(2);
+
+                    // Calculate rate_userthree_net 90% of rate_net
+                    var rate_net = parseFloat(row.querySelector('.ratenet-field input').value);
+                    var rate_userthree_net_field = row.querySelector('.rateuserthreenet-field');
+                    var rate_userthree_net_field_calculated_value = (rate_net * 0.9).toFixed(2);
+
+                    // Update the calculated value in the corresponding field 80%
+                    var rate_userone_od_field = row.querySelector('.rateuseroneod-field');
+                    rate_userone_od_field.innerHTML = ' ' + rate_userone_od_field_calculated_value + '';
+
+                    var rate_userone_tp_field = row.querySelector('.rateuseronetp-field');
+                    rate_userone_tp_field.innerHTML = ' ' + rate_userone_tp_field_calculated_value + '';
+
+                    var rate_userone_net_field = row.querySelector('.rateuseronenet-field');
+                    rate_userone_net_field.innerHTML = ' ' + rate_userone_net_field_calculated_value + '';
+
+                    // Update the calculated value in the corresponding field 80%
+                    var rate_usertwo_od_field = row.querySelector('.rateusertwood-field');
+                    rate_usertwo_od_field.innerHTML = ' ' + rate_usertwo_od_field_calculated_value + '';
+
+                    var rate_usertwo_tp_field = row.querySelector('.rateusertwotp-field');
+                    rate_usertwo_tp_field.innerHTML = ' ' + rate_usertwo_tp_field_calculated_value + '';
+
+                    var rate_usertwo_net_field = row.querySelector('.rateusertwonet-field');
+                    rate_usertwo_net_field.innerHTML = ' ' + rate_usertwo_net_field_calculated_value + '';
+
+                    // Update the calculated value in the corresponding field 90%
+                    var rate_userthree_od_field = row.querySelector('.rateuserthreeod-field');
+                    rate_userthree_od_field.innerHTML = ' ' + rate_userthree_od_field_calculated_value + '';
+
+                    var rate_userthree_tp_field = row.querySelector('.rateuserthreetp-field');
+                    rate_userthree_tp_field.innerHTML = ' ' + rate_userthree_tp_field_calculated_value + '';
+
+                    var rate_userthree_net_field = row.querySelector('.rateuserthreenet-field');
+                    rate_userthree_net_field.innerHTML = ' ' + rate_userthree_net_field_calculated_value + '';
+    
+                            
                     // Update the data via AJAX
                     $.ajax({
                         type: 'GET',
                         url: "{% url 'grid:ajax_update_rate' %}",
                         data: {
-                            'id': id,
+                            'pk': pk,
                             'rate_od': rate_od,
                             'rate_tp': rate_tp,
                             'company': company,
@@ -173,7 +253,19 @@
                             'month':month,
                             'state':state,
                             'rto':rto,
+                            'remarks':remarks,
                             'rate_net':rate_net,
+                            'rateuser1_od': rate_userone_od_field_calculated_value,
+                            'rateuser1_tp': rate_userone_tp_field_calculated_value,
+                            'rateuser1_net': rate_userone_net_field_calculated_value,
+                            'rateuser2_od': rate_usertwo_od_field_calculated_value,
+                            'rateuser2_tp': rate_usertwo_tp_field_calculated_value,
+                            'rateuser2_net': rate_usertwo_net_field_calculated_value,
+                            'rateuser3_od': rate_userthree_od_field_calculated_value,
+                            'rateuser3_tp': rate_userthree_tp_field_calculated_value,
+                            'rateuser3_net': rate_userthree_net_field_calculated_value,
+
+                            
                         },
                         success: function (response) {
                             if (response.status === 'success') {
@@ -181,7 +273,7 @@
                                 console.log(response);
         
                                 // Update the rate in the table
-                                let cell = $('.id-field:contains(' + response.data.id + ')');
+                                let cell = $('.id-field:contains(' + response.data.pk + ')');
                                 let row = cell.closest('tr');
                                 row.find('.rate-field').text(response.data.rate_od);
                                 row.find('.ratetp-field').text(response.data.rate_tp);
@@ -193,23 +285,32 @@
                                 row.find('.month-field').text(response.data.month);
                                 row.find('.state-field').text(response.data.state);
                                 row.find('.rto-field').text(response.data.rto);
+                                row.find('.remarks-field').text(response.data.remarks);
                                 row.find('.ratenet-field').text(response.data.rate_net);
-        
-                                // Switch back to display mode
+                                row.find('.rateuseroneod-field').text(response.data.rate_userone_od);
+                                row.find('.rateuseronetp-field').text(response.data.rate_userone_tp);
+                                row.find('.rateuseronenet-field').text(response.data.rate_userone_net);
+                                row.find('.rateusertwood-field').text(response.data.rate_usertwo_od);
+                                row.find('.rateusertwotp-field').text(response.data.rate_usertwo_tp);
+                                row.find('.rateusertwonet-field').text(response.data.rate_usertwo_net);
+                                row.find('.rateuserthreeod-field').text(response.data.rate_userthree_od);
+                                row.find('.rateuserthreetp-field').text(response.data.rate_userthree_tp);
+                                row.find('.rateuserthreenet-field').text(response.data.rate_userthree_net);
+                                                // Switch back to display mode
                                 toggleEditMode(row, index, true);
-                            } else {
+                                } else {
+                                    // Handle errors
+                                    console.log(response.message);
+                                }
+                            },
+                            error: function (response) {
                                 // Handle errors
-                                console.log(response.message);
+                                console.log(response);
                             }
-                        },
-                        error: function (response) {
-                            // Handle errors
-                            console.log(response);
-                        }
+                        });
                     });
                 });
-            });
-        
+
             function toggleEditMode(row, index, switchToEdit) {
                 var editButton = editButtons[index];
                 var updateButton = updateButtons[index];
@@ -219,6 +320,7 @@
                 updateButton.style.display = switchToEdit ? 'none' : 'inline-block';
         
                 // Loop through all editable fields and replace text with input fields
+               // Loop through all editable fields and replace text with input fields
                 row.querySelectorAll('.rate-field').forEach(function (rateField) {
                     var currentValue = rateField.innerText;
                     rateField.innerHTML = switchToEdit ? currentValue : '<input class="form-control" type="text" value="' + currentValue + '">';
@@ -259,10 +361,15 @@
                     var rtoValue = rtoField.innerText;
                     rtoField.innerHTML = switchToEdit ? rtoValue : '<input class="form-control" type="text" value="' + rtoValue + '">';
                 });
+                row.querySelectorAll('.remarks-field').forEach(function (remarksField) {
+                    var remarksValue = remarksField.innerText;
+                    remarksField.innerHTML = switchToEdit ? remarksValue : '<input class="form-control" type="text" value="' + remarksValue + '">';
+                });
                 row.querySelectorAll('.ratenet-field').forEach(function (ratenetField) {
                     var ratenetValue = ratenetField.innerText;
                     ratenetField.innerHTML = switchToEdit ? ratenetValue : '<input class="form-control" type="text" value="' + ratenetValue + '">';
                 });
+               
                 
                 // Set focus on the first input field for a better user experience
                 if (!switchToEdit) {
