--- a/templates/register.html
+++ b/templates/register.html
@@ -38,7 +38,77 @@
                 <div class="mb-3 row">
                   {% comment %} <label class="col-sm-3 col-form-label">Create New User ....!!!</label> {% endcomment %}
   
-        {{ form.as_p }}
+                  <div class="row">
+                    <div class="col">
+                      <div class="mb-3 row">
+                        
+        
+              <p>
+          <label for="id_username">Username:</label>
+          <input type="text" name="username" maxlength="150" autofocus="" required="" aria-describedby="id_username_helptext" id="id_username">
+          
+            <span class="helptext" id="id_username_helptext">Required. 150 characters or fewer. Letters, digits and @/./+/-/_ only.</span>
+          
+          
+        </p>
+      
+        
+        <p>
+          <label for="id_email">Email:</label>
+          <input type="email" name="email" maxlength="320" required="" id="id_email">
+          
+          
+        </p>
+      
+        
+        <p>
+          <label for="id_is_superuser">Is Admin :</label>
+          <input type="checkbox" name="is_superuser" class="form-check-input" id="id_is_superuser">
+          
+          
+        </p>
+      
+        
+        <p>
+          <label for="id_group">Group:</label>
+          <select name="group" id="id_group">
+        <option value="" selected="">Select Group</option>
+      
+        <option value="1">RateUser3</option>
+      
+        <option value="2">RateUser1</option>
+      
+        <option value="3">RateUser2</option>
+      
+      </select>
+          
+          
+        </p>
+      
+        
+        <p>
+          <label for="id_password1">Password:</label>
+          <input type="password" name="password1" autocomplete="new-password" required="" aria-describedby="id_password1_helptext" id="id_password1">
+          
+            <span class="helptext" id="id_password1_helptext"></span></p><ul><li>Your password can’t be too similar to your other personal information.</li><li>Your password must contain at least 8 characters.</li><li>Your password can’t be a commonly used password.</li><li>Your password can’t be entirely numeric.</li></ul>
+          
+          
+        <p></p>
+      
+        
+        <p>
+          <label for="id_password2">Password confirmation:</label>
+          <input type="password" name="password2" autocomplete="new-password" required="" aria-describedby="id_password2_helptext" id="id_password2">
+          
+            <span class="helptext" id="id_password2_helptext">Enter the same password as before, for verification.</span>
+          
+          
+            
+          
+        </p>
+          </div>
+      </div>
+      </div>
     </div>
 </div>
 </div>
